Fixes for wildcards.